# Prediciting-beta-turns-with-neural-network

./: .gitignore  README.md
neural_network/: neural_network.ipynb
pdb_parser/: CONSTANT.py  data_extraction_from_pdb.py  fetching_data_pdb.py  initialize_config.py  main.py  pdb_codes.txt  pyproject.toml  test_fetching_data_pdb.py
pdb_parser/config/: __init__.py  pdb_parser.toml  pdb_parser_test.toml  test_config.py
