[tool.poetry]
name = "pdb_parser"
version = "0.1.0"
description = ""
authors = ["Michał Jensko <michaljensko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
tomli = "^2.0.1"
requests = "^2.28.1"
pathlib = "^1.0.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
